--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,7 +12,8 @@
     "start:ios": "expo start --ios",
     "start:android": "expo start --android",
     "start:device:ios": "expo start --dev-client --scheme fitnudge --lan",
-    "start:device:android": "expo start --android --device"
+    "start:device:android": "expo start --android --device",
+    "check:backend": "node ./scripts/check-backend.mjs"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -21,6 +22,7 @@
     "@launchdarkly/react-native-client-sdk": "^10.11.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/cli-server-api": "^20.0.2",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.5.0",
@@ -28,7 +30,8 @@
     "@tanstack/react-query": "^5.90.5",
     "babel-plugin-module-resolver": "^5.0.2",
     "date-fns-tz": "^3.2.0",
-    "expo": "~54.0.22",
+    "dotenv": "^17.2.3",
+    "expo": "~54.0.23",
     "expo-apple-authentication": "~8.0.7",
     "expo-application": "~7.0.7",
     "expo-constants": "~18.0.10",
