--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@fitnudge/ui": "workspace:*",
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.24",
     "i18next": "^23.0.0",
