--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -38,10 +38,12 @@
     "typescript": "5.9.3"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.468.0",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
