remove postinstall from packages/ui

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,8 +25,7 @@
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
     "fix-imports": "node scripts/fix-imports.js",
-    "shadcn:add": "node scripts/shadcn-add.js",
-    "postinstall": "npm run fix-imports"
+    "shadcn:add": "node scripts/shadcn-add.js"
   },
   "devDependencies": {
     "@fitnudge/eslint-config": "workspace:*",
