--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -83,6 +83,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-chat": "^3.2.3",
     "react-native-google-mobile-ads": "^16.0.1",
+    "react-native-install-referrer": "^1.0.1",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-markdown-display": "^7.0.2",
     "react-native-mmkv": "^4.1.0",
