--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -114,6 +114,7 @@
     "@types/node": "^24.9.1",
     "@types/react": "~19.1.10",
     "@types/react-dom": "~19.1.10",
+    "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.51.0",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -132,7 +133,8 @@
     "jest-expo": "~54.0.16",
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "xml2js": "^0.6.0"
   },
   "private": true
 }
