--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
   "pnpm": {
     "overrides": {
       "react": "19.1.0",
-      "react-dom": "19.1.0"
+      "react-dom": "19.1.0",
+      "@expo/config-plugins": "54.0.4"
     },
     "patchedDependencies": {
-      "@bacons/apple-targets@3.0.5": "patches/@bacons__apple-targets.patch"
+      "@bacons/apple-targets@3.0.5": "patches/@bacons__apple-targets.patch",
+      "react-native-install-referrer@1.0.1": "patches/react-native-install-referrer@1.0.1.patch"
     }
   },
   "peerDependencies": {
